# griddim
# don't take ALUGRID_CONFORM if griddim != 2
GRIDDIM=2

# polorder
POLORDER=1

# solver
INNER_CG_SOLVERTYPE=OEMCGOp
#INNER_CG_SOLVERTYPE=OEMBICGSTABOp
OUTER_CG_SOLVERTYP=OEMCGOp

# grid
GRIDTYPE=ALUGRID_SIMPLEX
#GRIDTYPE=ALUGRID_CONFORM
#GRIDTYPE=YASPGRID
#GRIDTYPE=SGRID
#GRIDTYPE=UGGRID
#GRIDTYPE=ALBERTAGRID

# problem
#PROBLEM=SIMPLE_PROBLEM
#PROBLEM=CONSTANT_PROBLEM
#PROBLEM=ROTATE_PROBLEM
#PROBLEM=COCKBURN_PROBLEM
#PROBLEM=MICRO_PROBLEM
PROBLEM=GENRALIZED_STOKES_PROBLEM

AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) -DPOLORDER=$(POLORDER) -D$(GRIDTYPE) \
	-DINNER_CG_SOLVERTYPE=$(INNER_CG_SOLVERTYPE) -DOUTER_CG_SOLVERTYP=$(OUTER_CG_SOLVERTYP) \
	-DADAPTIVE_SOLVER -DUSE_BFG_CG_SCHEME -DUSE_ALTERNATIVE_SOLVER -g \
	-I../../dune-stuff -D$(PROBLEM) -O3 -funroll-loops

#-DSKIP_VOLUME_INTEGRALS

noinst_PROGRAMS = dune_stokes

dune_stokes_SOURCES = dune_stokes.cc

dune_stokes_CXXFLAGS = $(MPI_CPPFLAGS)  $(AM_CPPFLAGS)
dune_stokes_LDADD = $(MPI_LDFLAGS) $(ALUGRID_LDFLAGS) $(ALUGRID_LIBS)  \
$(MPI_LDFLAGS) $(DUNE_LDFLAGS) $(DUNE_LIBS) $(GRAPE_LDFLAGS) $(GRAPE_LIBS) $(BLAS_LIBS)

# don't follow the full GNU-standard
# we need automake 1.5
AUTOMAKE_OPTIONS = foreign 1.5

# pass most important options when "make distcheck" is used
DISTCHECK_CONFIGURE_FLAGS = --with-dune=$(DUNEROOT) CXX="$(CXX)" CC="$(CC)"

include $(top_srcdir)/am/global-rules
