# $Id: Makefile.am 3182 2006-10-16 12:41:36Z robertk $

albertadir = $(includedir)/dune/grid/albertagrid/
alberta_HEADERS = agrid.hh agelementindex.cc albertagrid.cc \
  agcommunicator.hh agmemory.hh albertaextra.hh albertaheader.hh \
  alberta_undefs.hh indexsets.hh referencetopo.hh datahandle.hh

include $(top_srcdir)/am/global-rules
