GRIDTYPE = SGRID
GRIDDIM = 2
PROBLEM = 0
POLORDER = 0

AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) -DPROBLEM=$(PROBLEM) -DPOLORDER=$(POLORDER) -D$(GRIDTYPE)
LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)

noinst_PROGRAMS = dgtest
dgtest_SOURCES = dgtest.cc

CLEANFILES = manager.*.log *.dgf.* dgfparser.log
