# $Id: Makefile.am 2547 2006-04-28 12:15:33Z robertk $

SUBDIRS = 

iovisualdir = $(includedir)/dune/grid/io/visual/grape
iovisual_HEADERS = geldesc.hh ghmesh.cc ghmesh.hh grapecommon.cc \
  grapecommon.hh grapedatadisplay.cc grapegriddisplay.cc grapehmesh.hh \
  grapeinclude.hh grapewrapper.hh partitiondisplay.cc combinedgrapedisplay.cc \
  grape_undefs.hh

include $(top_srcdir)/am/global-rules
